# runar

./: .gitignore  CLAUDE.md  COMPILER-BUGS.md  COMPILER-STACK-DIVERGENCE-BUG.md  GAP-FIX-PLAN.md  LANGUAGE-GAP-REPORT.md  README.md  check-ts-vs-go.mjs  go.work  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.claude/agents/: test-reviewer.md
.github/workflows/: ci.yml
artifacts/: StatefulContract.ts
codegen/templates/: wrapper.go.mustache  wrapper.py.mustache  wrapper.rs.mustache  (+2 more)
compilers/python/: pyproject.toml
compilers/python/runar_compiler/: __init__.py  __main__.py  compiler.py
compilers/python/runar_compiler/codegen/: babybear.py  blake3.py  ec.py  emit.py  optimizer.py  slh_dsa.py  stack.py
compilers/python/runar_compiler/frontend/: anf_lower.py  anf_optimize.py  ast_nodes.py  constant_fold.py  parser_dispatch.py  parser_go.py  parser_move.py  parser_python.py  parser_ruby.py  parser_rust.py  parser_sol.py  parser_ts.py  parser_zig.py  typecheck.py  validator.py
compilers/python/runar_compiler/ir/: loader.py  types.py
compilers/python/tests/: conftest.py  test_anf_optimize.py  test_compiler.py  test_constant_fold.py  test_emit.py  test_frontend.py  test_ir_loader.py  test_multiformat.py  test_optimizer.py  test_parser_zig.py  test_parsers.py  test_source_compile.py  test_stack.py
compilers/rust/: Cargo.toml  README.md
compilers/rust/src/: artifact.rs  lib.rs  main.rs
compilers/rust/src/codegen/: babybear.rs  blake3.rs  emit.rs  mod.rs  opcodes.rs  slh_dsa.rs  stack.rs
compilers/rust/src/frontend/: anf_lower.rs  anf_optimize.rs  ast.rs  constant_fold.rs  mod.rs  parser.rs  parser_gocontract.rs  parser_move.rs  parser_python.rs  parser_ruby.rs  parser_rustmacro.rs  parser_sol.rs  parser_zig.rs  typecheck.rs  validator.rs
compilers/rust/src/ir/: loader.rs  mod.rs
compilers/rust/tests/: compiler_tests.rs  ec_optimizer_tests.rs  frontend_tests.rs  multiformat_tests.rs  optimizer_tests.rs
conformance/: README.md  formats.json  script_execution_test.go
docs/: api-reference.md  compiler-architecture.md  contract-patterns.md  getting-started.md  integration-guide.md  language-reference.md  post-quantum-analysis.md  runar-whitepaper.tex  testing-guide.md  tsop-whitepaper.tex  zig-parity-status.md
examples/: README.md
examples/rust/: Cargo.toml
examples/rust/auction/: Auction.runar.rs  Auction_test.rs
examples/rust/blake3/: Blake3Test.runar.rs  Blake3Test_test.rs
examples/rust/convergence-proof/: ConvergenceProof.runar.rs  ConvergenceProof_test.rs
examples/rust/covenant-vault/: CovenantVault.runar.rs  CovenantVault_test.rs
examples/rust/escrow/: Escrow.runar.rs  Escrow_test.rs
examples/rust/function-patterns/: FunctionPatterns_test.rs
examples/rust/math-demo/: MathDemo.tsop.rs  MathDemo_test.rs
examples/rust/message-board/: MessageBoard.runar.rs  MessageBoard_test.rs
examples/rust/oracle-price/: OraclePriceFeed_test.rs
examples/rust/p2blake3pkh/: P2Blake3PKH.runar.rs  P2Blake3PKH_test.rs
examples/rust/p2pkh/: P2PKH_test.rs
examples/rust/post-quantum-wallet/: PostQuantumWallet.runar.rs  PostQuantumWallet_test.rs
examples/rust/schnorr-zkp/: SchnorrZKP.runar.rs  SchnorrZKP_test.rs
examples/rust/sha256-compress/: Sha256CompressTest.runar.rs  Sha256CompressTest_test.rs
examples/rust/sha256-finalize/: Sha256FinalizeTest.runar.rs  Sha256FinalizeTest_test.rs
examples/rust/sphincs-wallet/: SPHINCSWallet.runar.rs  SPHINCSWallet_test.rs
examples/rust/tic-tac-toe/: TicTacToe.runar.rs  TicTacToe_test.rs
examples/rust/token-ft/: FungibleTokenExample.runar.rs  FungibleToken_test.rs
examples/rust/token-nft/: NFTExample.runar.rs  NFT_test.rs
integration/: README.md  main_test.go  run-all.sh  teranode.sh
scripts/: bump-version.sh  publish-all.sh  release.sh
spec/: abi.md  artifact-format.md  grammar.md  ir-format.md  opcodes.md  stack-ir.md  type-system.md
tests/: DECISION-MERKLE-HASH.md  babybear-ext4-vectors.test.ts  babybear-vectors.test.ts  fri-colinearity-vectors.test.ts  measure-script-size.test.ts  merkle-vectors.test.ts
tests/generate-vectors/: Cargo.toml
tests/generate-vectors/src/: babybear_common.rs  generate_babybear_vectors.rs  generate_fri_vectors.rs  generate_merkle_vectors.rs
(+807 files in other folders)
