[package]
name = "runar-compiler-rust"
version = "0.3.2"
edition = "2021"
description = "Rust implementation of the Rúnar compiler (full pipeline: .runar.ts → Bitcoin Script)"
license = "MIT"
repository = "https://github.com/icellan/runar"
homepage = "https://github.com/icellan/runar"
keywords = ["bitcoin", "smart-contracts", "bsv", "compiler"]
categories = ["compilers"]

[dependencies]
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"

# SWC TypeScript parser (frontend passes 1-4)
swc_common = "0.37"
swc_ecma_parser = "0.149"
swc_ecma_ast = "0.118"
