[package]
name = "runar-example-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
runar = { package = "runar-lang", path = "../../packages/runar-rs" }

[[test]]
name = "p2pkh"
path = "p2pkh/P2PKH_test.rs"

[[test]]
name = "escrow"
path = "escrow/Escrow_test.rs"

[[test]]
name = "counter"
path = "stateful-counter/Counter_test.rs"

[[test]]
name = "fungible_token"
path = "token-ft/FungibleToken_test.rs"

[[test]]
name = "simple_nft"
path = "token-nft/NFT_test.rs"

[[test]]
name = "auction"
path = "auction/Auction_test.rs"

[[test]]
name = "covenant_vault"
path = "covenant-vault/CovenantVault_test.rs"

[[test]]
name = "oracle_price"
path = "oracle-price/OraclePriceFeed_test.rs"

[[test]]
name = "math_demo"
path = "math-demo/MathDemo_test.rs"

[[test]]
name = "function_patterns"
path = "function-patterns/FunctionPatterns_test.rs"

[[test]]
name = "convergence_proof"
path = "convergence-proof/ConvergenceProof_test.rs"

[[test]]
name = "schnorr_zkp"
path = "schnorr-zkp/SchnorrZKP_test.rs"

[[test]]
name = "post_quantum_wallet"
path = "post-quantum-wallet/PostQuantumWallet_test.rs"

[[test]]
name = "sphincs_wallet"
path = "sphincs-wallet/SPHINCSWallet_test.rs"

[[test]]
name = "ec_demo"
path = "ec-demo/ECDemo_test.rs"

[[test]]
name = "bounded_counter"
path = "property-initializers/BoundedCounter_test.rs"

[[test]]
name = "tic_tac_toe"
path = "tic-tac-toe/TicTacToe_test.rs"

[[test]]
name = "blake3_test"
path = "blake3/Blake3Test_test.rs"

[[test]]
name = "p2blake3pkh"
path = "p2blake3pkh/P2Blake3PKH_test.rs"

[[test]]
name = "sha256_compress_test"
path = "sha256-compress/Sha256CompressTest_test.rs"

[[test]]
name = "sha256_finalize_test"
path = "sha256-finalize/Sha256FinalizeTest_test.rs"
