[package]
name = "runar-fri-vectors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_babybear_vectors"
path = "src/generate_babybear_vectors.rs"

[[bin]]
name = "generate_merkle_vectors"
path = "src/generate_merkle_vectors.rs"

[[bin]]
name = "generate_fri_vectors"
path = "src/generate_fri_vectors.rs"

[dependencies]
p3-baby-bear = "0.5.2"
p3-field = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
